# Indigo

api/wasm/indigo-ketcher/: indigo-ketcher.cpp
core/indigo-core/: CMakeLists.txt
core/indigo-core/Atomic/: CMakeLists.txt  run.cpp
core/indigo-core/layout/: molecule_cleaner_2d.h
core/indigo-core/molecule/: atomic_level.h
core/indigo-core/molecule/src/: atomic_level.cpp
core/indigo-core/tests/tests/: formats.cpp
